Implement seedable rng

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ hex = "0.4.3"
 serde_json = "1.0.96"
 ethabi = "18.0.0"
 kdam = "0.3.0"
-rand = "0.8.5"
 bytes = "1.4.0"
 csv = "1.2.2"
+fastrand = "1.9.0"
