--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: test-build
 run-name: ${{ github.actor }} test build
 on: [pull_request]
 jobs:
-  rust_build:
+  cargo_build:
     runs-on: ubuntu-latest
     container: rust:slim
     steps:
