--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -37,4 +37,5 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy
+      - run: apt install libclang-dev
       - run: cargo clippy -- -Dwarnings
