--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -37,5 +37,5 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy
-      - run: apt install libclang-dev
+      - run: apt update && apt install libclang-dev
       - run: cargo clippy -- -Dwarnings
