--- a/lib_macros/Cargo.toml
+++ b/lib_macros/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "rust_sim_macros"
+name = "sim_macros"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dev-dependencies]
+[lib]
+proc-macro = true
+
+[dependencies]
+syn = "1.0"
+quote = "1.0"
