--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,5 +8,5 @@ jobs:
     container: rust:slim
     steps:
       - uses: actions/checkout@v2
-      - uses: shogo82148/actions-setup-perl@v1
+      - run: sudo apt-get update && sudo apt-get install libssl-dev
       - run: cargo build
