--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,5 +8,5 @@ jobs:
     container: rust:slim
     steps:
       - uses: actions/checkout@v2
-      - run: apt-get update && sudo apt-get install libssl-dev perl
+      - run: apt-get update && apt-get install libssl-dev perl
       - run: cargo build
