--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,5 +8,5 @@ jobs:
     container: rust:slim
     steps:
       - uses: actions/checkout@v2
-      - run: apt-get update && apt-get install -y libssl-dev perl
+      - run: apt-get update && apt-get install -y pkg-config libssl-dev
       - run: cargo build
