--- a/fork_evm/Cargo.toml
+++ b/fork_evm/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# foundry-compilers = { git = "https://github.com/foundry-rs/compilers" }
-# solang-parser = "0.3.2"
 
 revm = { version="3.5.0", default-features = false, features = [
     "std",
@@ -20,16 +18,10 @@ alloy-primitives = "0.4.2"
 alloy-sol-types = { version="0.4.2", features=["json"]}
 alloy-json-abi = "0.4.2"
 
-ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
-ethers-addressbook = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
-ethers-core = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
-ethers-contract = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
-ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
-ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
-ethers-signers = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
-ethers-middleware = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
-ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
-ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
+ethers = "2.0.10"
+ethers-core = "2.0.10"
+ethers-providers = "2.0.10"
+ethers-middleware = "2.0.10"
 
 # Encoding/decoding
 serde_json = "1"
@@ -44,10 +36,9 @@ thiserror = "1"
 tracing = "0.1"
 
 # Threading/futures
-tokio = { version = "1", features = ["time", "macros"] }
+tokio = "1.33.0"
 parking_lot = "0.12"
 futures = "0.3"
-# once_cell = "1"
 
 # Misc
 url = "2"
