--- a/rust_sim/Cargo.toml
+++ b/rust_sim/Cargo.toml
@@ -12,13 +12,11 @@ kdam = "0.3.0"
 fastrand = "2.0.0"
 log = "0.4.19"
 anyhow = "1.0.75"
+ethers = "2.0.10"
+tokio = "1.33.0"
 
 sim-macros = { path="../macros" }
 fork-evm = { path="../fork_evm" }
-
-ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
-
-tokio = { version = "1", features = ["time", "macros"] }
 
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
