Use workspace dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,16 @@ members = [
     "macros",
     "fork_evm",
 ]
+
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+
+[workspace.dependencies]
+revm = { version="3.5.0", default-features = false, features = ["memory_limit", "optional_eip3607", "optional_block_gas_limit", "optional_no_base_fee", "arbitrary"]}
+alloy-primitives = "0.4.2"
+alloy-sol-types = { version="0.4.2", features=["json"]}
+
+hex = "0.4.3"
+tokio = "1.33.0"
+ethers = "2.0.10"
