--- a/fork_evm/Cargo.toml
+++ b/fork_evm/Cargo.toml
@@ -1,24 +1,16 @@
 [package]
 name = "fork-evm"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
+revm = { workspace = true, features = ["std", "serde"] }
 
-revm = { version="3.5.0", default-features = false, features = [
-    "std",
-    "serde",
-    "memory_limit",
-    "optional_eip3607",
-    "optional_block_gas_limit",
-    "optional_no_base_fee",
-    "arbitrary",
-] }
-alloy-primitives = "0.4.2"
-alloy-sol-types = { version="0.4.2", features=["json"]}
+alloy-primitives.workspace = true
+alloy-sol-types.workspace = true
 alloy-json-abi = "0.4.2"
 
-ethers = "2.0.10"
+ethers.workspace = true
 ethers-core = "2.0.10"
 ethers-providers = "2.0.10"
 ethers-middleware = "2.0.10"
@@ -26,7 +18,7 @@ ethers-middleware = "2.0.10"
 # Encoding/decoding
 serde_json = "1"
 serde = "1"
-hex = "0.4.3"
+hex.workspace = true
 
 # Error handling
 eyre = "0.6"
@@ -36,7 +28,7 @@ thiserror = "1"
 tracing = "0.1"
 
 # Threading/futures
-tokio = "1.33.0"
+tokio.workspace = true
 parking_lot = "0.12"
 futures = "0.3"
 
