Forward etheruem type used for block number

--- a/rust_sim/Cargo.toml
+++ b/rust_sim/Cargo.toml
@@ -8,6 +8,7 @@ revm = { workspace = true, features = ["ethersdb"] }
 
 alloy-primitives.workspace = true
 alloy-sol-types.workspace = true
+ethereum-types.workspace = true
 
 hex.workspace = true
 tokio.workspace = true
