--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ edition = "2021"
 revm = { version="3.5.0", default-features = false, features = ["memory_limit", "optional_eip3607", "optional_block_gas_limit", "optional_no_base_fee", "arbitrary"]}
 alloy-primitives = "0.4.2"
 alloy-sol-types = { version="0.4.2", features=["json"]}
+ethereum-types = "0.14.1"
 
 hex = "0.4.3"
 tokio = "1.33.0"
