--- a/core/rust_sim/Cargo.toml
+++ b/core/rust_sim/Cargo.toml
@@ -14,12 +14,12 @@ ethereum-types.workspace = true
 ethers-core.workspace = true
 ethers-providers.workspace = true
 
+fastrand.workspace = true
 hex.workspace = true
 tokio.workspace = true
 futures.workspace = true
 
 kdam = "0.3.0"
-fastrand = "2.0.0"
 log = "0.4.19"
 anyhow = "1.0.75"
 
