--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -10,14 +10,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - uses: snok/install-poetry@v1
-        with:
-          version: 1.2.2
-          virtualenvs-create: false
-          installer-parallel: true
-      - run: poetry install
-      - run: pre-commit install
-      - run: task lint
+      - run: pip install hatch
+      - run: hatch run dev:lint
   rust_linting:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
