--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,4 +8,5 @@ jobs:
     container: rust:slim
     steps:
       - uses: actions/checkout@v2
+      - uses: webfactory/ssh-agent@v0.5.4
       - run: cargo build
