--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: webfactory/ssh-agent@v0.5.4
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
@@ -28,6 +29,7 @@ jobs:
     container: rust:slim
     steps:
       - uses: actions/checkout@v2
+      - uses: webfactory/ssh-agent@v0.5.4
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy
