--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.ACTIONS }}
       - run: cargo test
   rust_examples:
     if: github.event.pull_request.draft == false
@@ -17,4 +19,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.ACTIONS }}
       - run: cargo run --example basic_sim 200 100
