--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.ACTIONS }}
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
@@ -30,6 +32,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.ACTIONS }}
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy
