--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,4 +8,7 @@ jobs:
     container: rust:slim
     steps:
       - uses: actions/checkout@v2
+      - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.ACTIONS }}
       - run: cargo build
