--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,9 +5,9 @@ jobs:
   cargo_build:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
-    container: rust:slim
+    container: rust:latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ secrets.ACTIONS }}
