--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -28,7 +28,7 @@ jobs:
   rust_clippy:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
-    container: rust:slim
+    container: rust:latest
     steps:
       - uses: actions/checkout@v2
       - uses: webfactory/ssh-agent@v0.5.4
