--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,6 @@ futures = "0.3"
 # TODO: Patch to use the current main branch due to this bug
 #  https://github.com/alloy-rs/core/issues/204 with decoding
 #  variable length results from the EVM
-[patch.crates-io]
-alloy-primitives = { git = "ssh://github.com/alloy-rs/core.git" , rev = "89f07abf7837f63d22e30d2076e860dac6acef57" }
-alloy-sol-types = { git = "ssh://github.com/alloy-rs/core.git" , rev = "89f07abf7837f63d22e30d2076e860dac6acef57" }
+# [patch.crates-io]
+# alloy-primitives = { git = "ssh://github.com/alloy-rs/core.git" , rev = "89f07abf7837f63d22e30d2076e860dac6acef57" }
+# alloy-sol-types = { git = "ssh://github.com/alloy-rs/core.git" , rev = "89f07abf7837f63d22e30d2076e860dac6acef57" }
