Add abu from str and file

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,8 @@ repos:
     -   id: trailing-whitespace
     -   id: check-json
     -   id: pretty-format-json
+        types: [text]
+        files: \.(json|abi)$
         args:
           - "--autofix"
           - "--no-sort-keys"
