--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,5 +46,15 @@ lint = "pre-commit install && pre-commit run --all-files"
 test = "maturin develop --release && pytest -v tests"
 build = "maturin build --release"
 
+[tool.hatch.envs.notebook]
+dependencies = [
+  "maturin >= 1.2.3",
+  "patchelf >= 0.17.2.1",
+  "jupyter >= 1.0.0",
+]
+
+[tool.hatch.envs.notebook.scripts]
+jupyter = "maturin develop --release && jupyter notebook --notebook-dir=./py_examples"
+
 [project.urls]
 Source = "https://github.com/simtopia/rusty_venture"
