--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
   "maturin >= 1.2.3",
   "patchelf >= 0.17.2.1",
   "jupyter >= 1.0.0",
+  "matplotlib >= 3.8.2",
 ]
 
 [tool.hatch.envs.notebook.scripts]
