--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -16,3 +16,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: cargo run --example basic_sim 200 100
+  python_tests:
+    if: github.event.pull_request.draft == false
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - run: pip install hatch
+      - run: hatch run dev:test
