--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
   "pytest >= 7.4.2",
   "pre-commit >= 3.3.3",
   "patchelf >= 0.17.2.1",
+  "eth-hash[pycryptodome] >= 0.5.2",
 ]
 
 [tool.hatch.envs.dev.scripts]
