--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
   "tqdm >= 4.66.1",
   "numpy >= 1.26.2",
   "eth-hash[pycryptodome] >= 0.5.2",
+  "joblib >= 1.3.2",
 ]
 
 [tool.hatch.envs.dev]
@@ -39,7 +40,6 @@ dependencies = [
   "pytest >= 7.4.2",
   "pre-commit >= 3.3.3",
   "patchelf >= 0.17.2.1; platform_system != 'Darwin'",
-  "eth-hash[pycryptodome] >= 0.5.2",
 ]
 
 [tool.hatch.envs.dev.scripts]
