--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,3 +37,8 @@ repos:
     rev: "refs/tags/22.3.0:refs/tags/22.3.0"
     hooks:
     -   id: black
+# -   repo: https://github.com/rstcheck/rstcheck
+#     rev: 'v6.2.0'
+#     hooks:
+#     -   id: rstcheck
+#         additional_dependencies: [sphinx]
