--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.maturin]
-module-name = "verbs._verbs"
+module-name = "verbs.envs"
 
 [build-system]
 requires = ["maturin>=1.2,<2.0"]
@@ -62,12 +62,14 @@ jupyter = "maturin develop --release && jupyter notebook --notebook-dir=./py_exa
 
 [tool.hatch.envs.sphinx]
 dependencies = [
+  "maturin >= 1.2.3",
+  "patchelf >= 0.17.2.1",
   "sphinx >= 7.2.6",
   "pydata-sphinx-theme >= 0.14.4",
 ]
 
 [tool.hatch.envs.sphinx.scripts]
-build = "sphinx-build -M html docs/python/source docs/python/build"
+build = "maturin develop && sphinx-build -M html docs/python/source docs/python/build"
 
 [project.urls]
 Source = "https://github.com/simtopia/rusty_venture"
