--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,11 +65,13 @@ dependencies = [
   "maturin >= 1.2.3",
   "patchelf >= 0.17.2.1",
   "sphinx >= 7.2.6",
-  "pydata-sphinx-theme >= 0.14.4",
+  "furo >= 2023.9.10",
+  "sphinx-copybutton >= 0.5.2",
 ]
 
 [tool.hatch.envs.sphinx.scripts]
 build = "maturin develop && sphinx-build -M html docs/python/source docs/python/build"
+intersphinx = "python -m sphinx.ext.intersphinx https://docs.python.org/3/objects.inv"
 
 [project.urls]
 Source = "https://github.com/simtopia/rusty_venture"
