--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -15,6 +15,7 @@ fastrand.workspace = true
 
 numpy = "0.20.0"
 pyo3 = { version="0.20.0", features = ["extension-module"] }
+pyo3-log = "0.9.0"
 
 rust_sim = { path = "../core/rust_sim" }
 fork-evm = { path = "../core/fork_evm" }
