--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -23,7 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x86_64, x86, aarch64, armv7, s390x, ppc64le]
+        # aarch64 fails?
+        target: [x86_64, x86, armv7, s390x, ppc64le]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
