--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
   "numpy >= 1.26.2",
   "eth-hash[pycryptodome] >= 0.5.2",
   "joblib >= 1.3.2",
+  "py-solc-x >= 2.0.2",
 ]
 
 [tool.hatch.envs.dev]
