--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ develop = "maturin develop --release"
 lint = "pre-commit install && pre-commit run --all-files"
 test = "maturin develop --release && pytest -v tests"
 build = "maturin build --release"
-examples = "maturin build --release && python py_examples/basic_sim.py && python py_examples/batch_runner.py"
+examples = "maturin build --release && python examples/basic_sim.py && python examples/batch_runner.py"
 
 [tool.hatch.envs.notebook]
 dependencies = [
@@ -59,7 +59,7 @@ dependencies = [
 ]
 
 [tool.hatch.envs.notebook.scripts]
-jupyter = "maturin develop --release && jupyter notebook --notebook-dir=./py_examples"
+jupyter = "maturin develop --release && jupyter notebook --notebook-dir=./examples"
 
 [tool.hatch.envs.sphinx]
 dependencies = [
