--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ build-backend = "maturin"
 [project]
 name = "verbs"
 version = "0.1.0"
-description = ''
+description = 'Python Ethereum ABM Library'
 readme = "README.md"
 requires-python = ">=3.8"
 keywords = []
