--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,4 +76,4 @@ build = "maturin develop && sphinx-build -M html docs/python/source docs/python/
 intersphinx = "python -m sphinx.ext.intersphinx https://docs.python.org/3/objects.inv"
 
 [project.urls]
-Source = "https://github.com/simtopia/rusty_venture"
+Source = "https://github.com/simtopia/verbs"
