Add pyproject fields

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,12 @@ authors = [
   { name = "Jordan", email = "jordan@simtopia.ai" },
   { name = "Marc", email = "marc@simtopia.ai"}
 ]
+maintainers = [
+  { name = "Jordan", email = "jordan@simtopia.ai" },
+  { name = "Marc", email = "marc@simtopia.ai"}
+]
 classifiers = [
+  "Development Status :: 4 - Beta",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
