--- a/.github/workflows/test_release.yaml
+++ b/.github/workflows/test_release.yaml
@@ -5,5 +5,6 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
-      - run: echo HEllO
+      - run: echo HELLO
