--- a/.github/workflows/build_and_release.yaml
+++ b/.github/workflows/build_and_release.yaml
@@ -107,7 +107,7 @@ jobs:
     # if: "startsWith(github.ref, 'refs/tags/')"
     needs: [linux, windows, macos, sdist]
     steps:
-      run: echo "This will release"
+      - run: echo "This will release"
     # steps:
     #   - uses: actions/download-artifact@v3
     #     with:
