--- a/.github/workflows/build_and_release.yaml
+++ b/.github/workflows/build_and_release.yaml
@@ -102,7 +102,6 @@ jobs:
           path: dist
 
   release:
-    name: Release
     runs-on: ubuntu-latest
     # if: "startsWith(github.ref, 'refs/tags/')"
     needs: [linux, windows, macos, sdist]
@@ -119,3 +118,40 @@ jobs:
     #     with:
     #       command: upload
     #       args: --non-interactive --skip-existing *
+
+  build_docs:
+    runs-on: ubuntu-latest
+    needs: release
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - run: pip install hatch
+      - run: hatch run sphinx:build
+      - uses: actions/upload-artifact@v3
+        with:
+          name: github-pages
+          path: docs/python/build
+
+  publish_docs:
+    runs-on: ubuntu-latest
+    needs: build_docs
+    steps:
+      - run: echo "This will release documentation"
+    # # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    # permissions:
+    #   pages: write      # to deploy to Pages
+    #   id-token: write   # to verify the deployment originates from an appropriate source
+
+    # # Deploy to the github-pages environment
+    # environment:
+    #   name: github-pages
+    #   url: ${{ steps.deployment.outputs.page_url }}
+
+    # # Specify runner + deployment step
+    # runs-on: ubuntu-latest
+    # steps:
+    #   - name: Deploy to GitHub Pages
+    #     id: deployment
+    #     uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
