--- a/.github/workflows/build_and_release.yaml
+++ b/.github/workflows/build_and_release.yaml
@@ -104,7 +104,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [linux, windows, macos, sdist]
-    if: startsWith(github.ref, 'refs/tags/')
+    # if: startsWith(github.ref, 'refs/tags/')
     environment:
       name: pypi
       url: https://pypi.org/p/verbs
