--- a/.github/workflows/build_and_release.yaml
+++ b/.github/workflows/build_and_release.yaml
@@ -104,24 +104,20 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [linux, windows, macos, sdist]
-    steps:
-      - run: echo "This will release"
-
-    # TODO: Uncomment when we want to release
     # if: startsWith(github.ref, 'refs/tags/')
-    # environment:
-    #   name: pypi
-    #   url: https://pypi.org/p/verbs
-    # permissions:
-    #   id-token: write
-    # steps:
-    # - name: Downloas dists
-    #   uses: actions/download-artifact@v3
-    #   with:
-    #     name: dist/
-    #     name dist
-    # - name: Publish distribution 📦 to PyPI
-    #   uses: pypa/gh-action-pypi-publish@release/v1
+    environment:
+      name: pypi
+      url: https://pypi.org/p/verbs
+    permissions:
+      id-token: write
+    steps:
+    - name: Download dists
+      uses: actions/download-artifact@v3
+      with:
+        name: wheels
+        path: dist/
+    - name: Publish distribution 📦 to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
 
   build_docs:
     runs-on: ubuntu-latest
@@ -141,21 +137,18 @@ jobs:
   publish_docs:
     runs-on: ubuntu-latest
     needs: build_docs
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
     steps:
-      - run: echo "This will release documentation"
-    # # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    # permissions:
-    #   pages: write      # to deploy to Pages
-    #   id-token: write   # to verify the deployment originates from an appropriate source
-
-    # # Deploy to the github-pages environment
-    # environment:
-    #   name: github-pages
-    #   url: ${{ steps.deployment.outputs.page_url }}
-
-    # # Specify runner + deployment step
-    # runs-on: ubuntu-latest
-    # steps:
-    #   - name: Deploy to GitHub Pages
-    #     id: deployment
-    #     uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
