--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,4 +82,6 @@ build = "maturin develop && sphinx-build -M html docs/python/source docs/python/
 intersphinx = "python -m sphinx.ext.intersphinx https://docs.python.org/3/objects.inv"
 
 [project.urls]
-Source = "https://github.com/simtopia/verbs"
+docs = "https://simtopia.github.io/verbs/"
+documentation = "https://simtopia.github.io/verbs/"
+source = "https://github.com/simtopia/verbs"
