--- a/.github/workflows/pre_merge.yaml
+++ b/.github/workflows/pre_merge.yaml
@@ -53,7 +53,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
         with:
-          components: [rustfmt, clippy]
+          components: rustfmt, clippy
       - name: Download Rust build
         uses: actions/download-artifact@v4
         with:
