--- a/.github/workflows/pre_merge.yaml
+++ b/.github/workflows/pre_merge.yaml
@@ -87,7 +87,17 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      # - name: Install hatch
-      #   run: pip install hatch
-      # - name: Build sphinx docs
-      #   run: hatch run sphinx:build
+      - name: Install hatch
+        run: pip install hatch
+      - name: Install dependencies
+        run: hatch --env sphinx dep show requirements -e > requirements.txt
+      - name: Install Sphinx requirements
+        run: pip install -r requirements.txt
+      - name: Download wheel
+        uses: actions/download-artifact@v4
+        with:
+          name: python_build
+      - name: Install package
+        run: pip install verbs-*-manylinux_2_34_x86_64.whl
+      - name: Build Sphinx
+        run: sphinx-build -M html docs/python/source docs/python/build
