--- a/.github/workflows/build_and_release.yaml
+++ b/.github/workflows/build_and_release.yaml
@@ -104,7 +104,6 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [linux, windows, macos, sdist]
-    if: startsWith(github.ref, 'refs/tags/')
     environment:
       name: pypi
       url: https://pypi.org/p/verbs
@@ -127,9 +126,12 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install hatch
-      - run: hatch run sphinx:build
-      - uses: actions/upload-pages-artifact@v3.0.0
+      - name: Install hatch 🐣
+        run: pip install hatch
+      - name: Build docs 📚
+        run: hatch run sphinx:build
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3.0.0
         with:
           path: docs/python/build/html
 
