--- a/.github/workflows/build_and_release.yaml
+++ b/.github/workflows/build_and_release.yaml
@@ -113,7 +113,7 @@ jobs:
     - name: Download dists
       uses: actions/download-artifact@v4
       with:
-        name: wheels-*
+        pattern: wheels-*
         merge-multiple: true
         path: dist/
     - name: Publish distribution 📦 to PyPI
