--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
   "eth-hash[pycryptodome] >= 0.5.2",
   "joblib >= 1.3.2",
   "py-solc-x >= 2.0.2",
+  "pandas >= 2.2.0",
 ]
 
 [tool.hatch.envs.dev]
