--- a/core/rust_sim/Cargo.toml
+++ b/core/rust_sim/Cargo.toml
@@ -28,3 +28,4 @@ db = { path="../db" }
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
 rstest = "0.18.2"
+clap = { version = "4.5.1", features = ["derive"] }
