Add doctest to workflow

--- a/.github/workflows/pre_merge.yaml
+++ b/.github/workflows/pre_merge.yaml
@@ -95,3 +95,5 @@ jobs:
         run: pip install hatch
       - name: Install verbs and build docs 📚
         run: hatch run sphinx:build
+      - name: Test doc examples
+        run: hatch run sphinx:test
