--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ dependencies = [
 [tool.hatch.envs.sphinx.scripts]
 build = "maturin develop && sphinx-build -M html docs/python/source docs/python/build"
 intersphinx = "python -m sphinx.ext.intersphinx https://docs.python.org/3/objects.inv"
+test = "maturin develop && sphinx-build -W -b doctest docs/python/source docs/python/build"
 
 [project.urls]
 docs = "https://simtopia.github.io/verbs/"
